<?xml version="1.0"?>
<package>
  <name>merbots_whrov_msgs</name>
  <version>0.0.0</version>
  <description>The merbots_whrov_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="centelld@todo.todo">centelld</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>

<build_depend>roscpp</build_depend>
<run_depend>roscpp</run_depend>

<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>

<run_depend>actionlib</run_depend>

<build_depend>actionlib_msgs</build_depend>
<run_depend>actionlib_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
